syntax = "proto3";

package Contracts.Services.Account.Protobuf;

import "Abstractions/Abstractions.proto";

// The greeting service definition.
service Accounter {
  // Sends a greeting
  rpc GetListStoreNear (LocationRequest) returns (Abstractions.Protobuf.FindResponse);
  rpc SearchListStore (SearchRequest) returns (Abstractions.Protobuf.ListResponse);
}

message AccountDetails {
	string Id = 1;
	string Name = 2;
	string Image = 3;
	string Phone = 4;
	string Address = 5;
}

message LocationRequest {
	double Longitude = 2;
	double Latitude = 3;
}

message SearchRequest {
	Abstractions.Protobuf.Paging Paging = 1;
	string Keyword = 2;
	string Nation = 3;
	string City = 4;
}

